[package]
name = "notch"
version = "0.1.6"
edition = "2021"
license-file = "LICENSE"
description = "A compact and fast library for managing Minecraft servers."
repository = "https://github.com/Azuyamat/Notch"
readme = "README.md"
keywords = ["minecraft", "server", "library", "notch"]
categories = ["game-development"]
authors = ["Azuyamat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.51"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
